Fix extra padding bugs

--- a/src/components/secondPassphrase/secondPassphrase.css
+++ b/src/components/secondPassphrase/secondPassphrase.css
@@ -4,11 +4,10 @@
   --padding-top: 40px;
 }
 
-.register {
-  & > div {
-    height: 100%;
-    overflow: hidden;
-  }
+.register > div {
+  height: 100%;
+  overflow: hidden;
+  margin: 0 -48px;
 }
 
 .hasPaddingTop {
@@ -29,4 +28,22 @@
 
 .hidden {
   display: none;
+}
+
+@media (--xLarge-viewport) {
+  .register > div {
+    margin: 0 calc(var(--box-padding-left-XL) * -1);
+  }
+}
+
+@media (--large-viewport) {
+  .register > div {
+    margin: 0 calc(var(--box-padding-left-L) * -1);
+  }
+}
+
+@media (--medium-viewport) {
+  .register > div {
+    margin: 0 calc(var(--box-padding-left-M) * -1);
+  }
 }
